--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.27.0",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "react-hot-toast": "^2.4.1"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
