--- a/client/package.json
+++ b/client/package.json
@@ -23,8 +23,11 @@
     "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.14",
     "react-hot-toast": "^2.4.1"
-
   },
+    "optionalDependencies": {
+      "@rollup/rollup-linux-x64-gnu": "4.32.0",
+      "@rollup/rollup-win32-x64-msvc": "4.32.0"
+    },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
